day4/workshop4/using-kustomize/base/app.yml
---
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: wpapp-deploy 
  labels: 
    app: wp 
    name: wpapp-deploy 
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app: wp
      name: wpapp-pod
  template:
    metadata:
      name: wpapp-pod 
      labels:
        app: wp
        name: wpapp-pod 
    spec:
      containers:
      - name: wpapp-container
        image: wordpress:5 
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80

---
apiVersion: v1 
kind: Service
metadata:
  name: wpapp-svc 
  labels: 
    app: wp
    name: wpapp-svc
spec:
  type: ClusterIP 
  selector:
    app: wp 
    name: wpapp-pod
  ports:
  - port: 80 
    targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: wpapp-ing 
  labels:
    app: wp 
    name: wpapp-ing 
spec:
  ingressClassName: nginx 
  rules:
  - host: tenant-163.47.11.239.nip.io
    http: 
      paths: 
      - path: /
        pathType: Prefix 
        backend:
          service: 
            name: wpapp-svc
            port: 
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: wpapp-netpol
  labels:
    app: wp
    name: wpapp-netpol
spec:
  podSelector:
    matchLabels:
      app: wp
      name: wpapp-pod
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from: 
    - namespaceSelector: 
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
          name: ingress-nginx
      podSelector:
        matchLabels:
          app.kubernetes.io/component: controller
          app.kubernetes.io/instance: ingress-nginx
          app.kubernetes.io/name: ingress-nginx
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: wp
          name: wpdb-sts
    ports:
    - port: 3306
      protocol: TCP
  - ports:
    - port: 53
      protocol: TCP
    - port: 53
      protocol: UDP
